--- a/public/css/mobile2.css
+++ b/public/css/mobile2.css
@@ -724,6 +724,6 @@
     }
 
     .status-badge-draw {
-      background-color: #d81e5b;
-      color: #ffffff;
+      background-color: #ffffff;
+      color: #2a2b2a;
     }
