--- a/public/css/mobile2.css
+++ b/public/css/mobile2.css
@@ -803,7 +803,7 @@
       position: sticky;
       top: 0;
       right: 0;
-      background-color: #ff5500;
+      background-color: #ed2224;
       color: white;
       width: 30px;
       height: 30px;
