--- a/public/css/mobile2.css
+++ b/public/css/mobile2.css
@@ -52,7 +52,7 @@
   right: 0;
   z-index: 100;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 10px 16px;
   background-color: #131313;
   height: 40px;
@@ -82,6 +82,7 @@
   cursor: pointer;
   position: relative;
   padding-right: 15px;
+  padding-left: 10px;
 }
 
 
