--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -34,6 +34,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     padding-bottom: 130px;
+    margin-top: -10px;
   }
   
   /* Fixed Header Container */
