--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -798,7 +798,7 @@
       color: #ffffff;
     }
     
-    .match_3letter .team-bold {
+    .match_3letter-team-bold {
       font-weight: 700;
       color: white;
     }
