--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -360,6 +360,13 @@
     bottom: 96px; 
     left: 50%; 
     transform: translateX(-50%); 
+    
+    position: fixed; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    z-index: 101; 
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
   
   }
 
