--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -7,7 +7,7 @@
   
   body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #131313;
+    background-color: #282727;
     background-image: url('../images/GradientBG.png');
     background-size: cover;
     background-position: center top;
@@ -62,7 +62,7 @@
   /* Modify the header styles to make it sticky */
   .header {
     padding: 16px;
-    background-color: #131313;
+    background-color: #000000;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -124,7 +124,7 @@
   
   .progress-bar {
     height: 100%;
-    background: linear-gradient(to right, #ed2224, #ED33B9);
+    background: linear-gradient(to right, #F1BE48, #ED33B9);
     border-radius: 3px;
   }
   
@@ -152,7 +152,7 @@
   .teex-balance {
     display: flex;
     align-items: center;
-    background-color: #0bdad7;
+    background-color: #F1BE48;
     border-radius: 50px;
     padding: 6px 0;
     height: 24px;
@@ -297,7 +297,7 @@
     left: 10%;
     width: 80%;
     height: 3px;
-    background-color: #ed2224;
+    background-color: #F1BE48;
   }
   
   .tab_off {
@@ -318,7 +318,7 @@
     justify-content: space-between;
     align-items: center;
     /*background-color: rgba(10, 0, 52, 0.5); /* 50% trasparente */
-    background-color: #131313;
+    background-color: #282727;
     padding: 8px 16px;
     z-index: 100;
     height: 80px;
@@ -353,7 +353,7 @@
     min-width: 40px;
     margin: 0 4px;
     line-height: 1;  /* Added to further reduce height */
-    background-color: #ed2224;
+    background-color: #F1BE48;
     color: #ffffff;
     height:28px;
     position: fixed; 
@@ -412,7 +412,7 @@
     right: -3px;
     bottom: -3px;
     border-radius: 50px;
-    background: linear-gradient(90deg, #ed2224, #ac0036, #ed2224);
+    background: linear-gradient(90deg, #F1BE48, #C99A42, #F1BE48);
     background-size: 300% 100%;
     z-index: -1;
     animation: animatedBorder 9s linear infinite;
@@ -453,25 +453,25 @@
     color: #fff;
   }
   .footer_button_cyan {
-    background-color: #ed2224;
+    background-color: #F1BE48;
     color: #2a2b2a;
   }
 
   .footer_button_orange {
     background-color:  #2a2b2a;
-    border: 2px solid #ed2224;
+    border: 2px solid #F1BE48;
     color: white;
   }
 
   .footer_button_orange_fill {
-    background-color: #ed2224;
+    background-color: #F1BE48;
         color: white;
   }
 
   .fb_unable_orange {
     background-color: #2a2b2a;
     opacity: 0.5 ;
-    border: 2px solid #ed2224;
+    border: 2px solid #F1BE48;
     color: white;
   } 
 
@@ -514,7 +514,7 @@
   .play-button {
     width: 80px;
     height: 80px;
-    background-color: #ed2224;
+    background-color: #F1BE48;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
@@ -710,7 +710,7 @@
       border-radius: 50%;
       object-fit: cover;
       position: relative;
-      background-color: #ed2224;
+      background-color: #F1BE48;
     }
     
     /* Athlete Avatar - 23% larger but same starting point */
@@ -720,7 +720,7 @@
       border-radius: 50%;
       object-fit: cover;
       position: relative;
-      background-color: #ed2224;
+      background-color: #F1BE48;
       overflow: hidden;
     }
     
@@ -856,7 +856,7 @@
     
     /* Cost styles */
     .athlete_cost {
-      background-color: #0bdad7;
+      background-color: #F1BE48;
       border-radius: 12px;
       padding: 0px  2px 18px 2px;
       font-family: 'Montserrat', sans-serif;
@@ -925,7 +925,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
     font-size: 16px;
-    color: #0bdad7;
+    color: #F1BE48;
     text-transform: uppercase;
   }
   
@@ -940,7 +940,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
     font-size: 16px;
-    color: #0bdad7;
+    color: #F1BE48;
   }
 
 
@@ -988,12 +988,12 @@
   }
   
   .scc_porpora {
-    background-color: #ed2224;
-    color: #ffffff;
+    background-color: #FEFBF1;
+    color: #282727;
   }
   
   .scc_cyan {
-    background-color: #0bdad7;
+    background-color: #F1BE48;
     color: #2a2b2a;
   }
   
@@ -1003,6 +1003,6 @@
   }
 
   .scc_petrolio {
-    background-color: #0f7173;
+    background-color: #9A6D19;
     color: #ffffff;
   }
