--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -70,7 +70,9 @@
     top: 0;
     z-index: 102;
   }
-  
+  .header.small {
+    padding: 8px;
+  }
 
   .user-profile {
     display: flex;
@@ -314,7 +316,7 @@
     background-color: #282727;
     padding: 8px 16px;
     z-index: 100;
-    height: 80px;
+    height: 60px;
     padding-bottom: 8px;
   }
 
