--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1048,3 +1048,30 @@
     background-color: #9A6D19;
     color: #ffffff;
   }
+
+  .league-avatar {
+    background-color: #F1BE48; /* Giallo */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    border-radius: 50%;
+    text-transform: uppercase;
+  }
+
+  .MainNumber {
+    color: #000;
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 42px;
+    text-transform: uppercase;
+    margin-bottom: 4px;
+  }
+
+  
+  .SmallNumber {
+    color: #000;
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-bottom: -16px;
+  }
