--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -718,6 +718,10 @@
       width: 50%;
     }
     
+    .team-container-league {
+      width: 100%;
+    }
+    
     .left-team {
       padding-right: 5px;
     }
@@ -736,6 +740,11 @@
       gap: 6px;
       padding-bottom: 100px;
     }
+
+    .team-list.league {
+      padding-bottom: 10px;
+    }
+
     
     /* Player Row Styles */
     .player-row {
@@ -743,8 +752,13 @@
       align-items: center;
       margin-bottom: 6px;
       position: relative;
+      margin-top: 10px;
     }
     
+    .player-row.league {
+      margin-right: 16px;;
+      margin-left: 16px;
+    }
     /* Avatar and Position Circle */
     .userAvatar {
       width: 50px;
@@ -941,9 +955,27 @@
       position: relative;
       z-index: 1;
     }
+
+    .contest_leaguename {
+      background-color: #2a2b2a;
+      height: 36px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 15px;
+      margin-bottom: 10px;
+      margin-top: 0px;
+      position: relative;
+      z-index: 1;
+      font-family: 'Barlow Condensed', sans-serif;
+      font-weight: 600;
+      font-size: 16px;
+      color: white;
+    }
+
     .full_username {
       font-family: 'Barlow Condensed', sans-serif;
-      font-weight: 400;
+      font-weight: 600;
       font-size: 16px;
       color: white;
       text-transform: uppercase;
@@ -1075,3 +1107,66 @@
     text-transform: uppercase;
     margin-bottom: -16px;
   }
+
+  
+  .sort-ppc-icon {
+    width: 16px; 
+    height: 16px; 
+    margin-right: 4px; 
+    vertical-align: middle;
+
+  }
+
+  .ppc-value {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    color: #F1BE48;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    margin-top: 4px;
+  }
+  
+  .ppc-icon {
+    width: 16px;
+    height: 16px;
+    margin-right: 4px;
+  }
+  
+  .pos {
+    margin-right: 24px;
+  }
+  
+  .league-rank {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    color: #ffffff;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    margin-top: 4px;
+  }
+   .hidden {
+    display: none !important;
+  }
+  
+  .rotated {
+    transform: rotate(180deg);
+    transition: transform 0.2s ease;
+  }
+
+  .league-status{
+    padding: 4px 10px;
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .league-status.inv{
+    color: #F1BE48;
+  }
+  .league-status.rej{
+    color: #ff0000;
+  }
+
+
