--- a/public/css/mobile2.css
+++ b/public/css/mobile2.css
@@ -271,8 +271,8 @@
   font-weight: 800;
   font-size: 12px;
   color: white;
-  position: absolute;
-  bottom: -38px;
+  position: relative;
+  bottom: 16px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 10;
